--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-hook-form": "^7.52.1",
     "react-native": "0.74.3",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-vision-camera": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
