Build release apk

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -41,3 +41,8 @@ newArchEnabled=false
 hermesEnabled=true
 
 VisionCamera_enableCodeScanner=true
+
+MYAPP_UPLOAD_STORE_FILE=zerowastemate_ks.keystore
+MYAPP_UPLOAD_KEY_ALIAS=zerowastemate_ka
+MYAPP_UPLOAD_STORE_PASSWORD=Zerowastemate2003
+MYAPP_UPLOAD_KEY_PASSWORD=Zerowastemate2003
