--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.52.1",
     "react-native": "0.74.3",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
